--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
-    "next": "14.0.4",
+    "lucide-react": "^0.553.0",
+    "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0"
